<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/menuTitleBar"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:background="@color/darkGraycolor"
    android:orientation="horizontal"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/unrdIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:src="@drawable/unrd_sign" />

    <TextView
        android:id="@+id/unrdText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/drawer_title"
        android:textSize="19sp" />
</LinearLayout>