...
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_video"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menuTitleBar" />

    <TextView
        android:id="@+id/videoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:fontFamily="sans-serif"
        android:text="@string/videos_label"
        android:textSize="16sp"
...
